--- a/frontend/public/upload.html
+++ b/frontend/public/upload.html
@@ -14,7 +14,7 @@
       <div class="upload_area">
         <table style="border: 1px solid #000; border-collapse: collapse;">
           <tr>
-            <td><input type="file" id="input_upload" name="file123"></td>
+            <td><input type="file" id="input_upload" name="file"></td>
           </tr>
           <tr>
             <td><button onclick="upload_frontend()">Upload Go Go</button></td>
